# common_source_project-mz2500-linux

./: .gitignore  DebuggerForMZ2500.md  README.md  run_mz2500.sh
source/cmake/: config.cmake
source/src/: common.cpp  config.cpp  config.h  debugger.cpp  emu.cpp  emu.h
source/src/qt/: osd_input.cpp
source/src/qt/common/: qt_utils.cpp
source/src/qt/emu_thread/: emu_thread_slots.cpp  emu_thread_tmpl.cpp
source/src/qt/gui/: display_statusbar.cpp  dropdown_keytables.h  mainwidget_base.h  mainwindow_utils.cpp  menu_machine.cpp  menu_main.cpp  qt_debugger_tmpl.cpp  qt_main.cpp
source/src/qt/machines/fmtowns/: MainWindow.cpp  menuclasses.h
source/src/qt/sound-drivers/qt_multimedia/: osd_sound_mod_qtmultimedia.cpp
source/src/types/: simd.h
source/src/vm/: scsi_cdrom.cpp
source/src/vm/fmtowns/: CMakeLists.txt  crtc.cpp  dictionary.cpp  fmtowns.cpp  fmtowns.h  fontrom_20pix.cpp  fontrom_20pix.h  fontroms.cpp  sprite.cpp  sprite.h  towns_common.h  towns_memory.cpp  towns_memory.h  vram.h
source/src/vm/mz2500/: CMakeLists.txt  floppy.cpp  floppy.h  memory.cpp  memory.h  mz1r37.cpp  mz1r37.h  mz2500.cpp  mz2500.h
